--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -4,12 +4,7 @@
   padding: $base-size;
 }
 
-.title {
-  padding: ($base-size * 3) 0;
-  text-align: center;
-  font-size: ($base-size * 3);
-  text-transform: uppercase;
-}
+
 
 .subtitle {
   padding: ($base-size * 2) 0;
@@ -19,6 +14,6 @@
   font-weight: normal;
 }
 
-.title + .subtitle {
+.subtitle {
   margin-top: (- $base-size * 3);
 }
