--- a/src/components/Favorite/Favorite.module.scss
+++ b/src/components/Favorite/Favorite.module.scss
@@ -19,6 +19,7 @@
 
     .card {
         padding: 20px;
+        font-size: 15px;
     }
     span {
         font-size: 30px;
@@ -32,3 +33,7 @@ i {
   font-size: 35px;
 }
 
+li {
+    text-align: center;
+    padding: 10px;
+}
