--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -11,3 +11,9 @@
     justify-content: space-between;
     font-weight: bold;
 }
+i:hover {
+    transform: scale(2); 
+    color: #fff;
+    box-shadow: inset 200px 0 0 0 #26de81;
+    border-radius: 50%;
+}
