Add search refresh

--- a/src/components/Favorite/Favorite.module.scss
+++ b/src/components/Favorite/Favorite.module.scss
@@ -16,21 +16,17 @@
   color:#0a0a0a;
   border-radius: 5%;
   width:fit-content;
+  text-align: center;
 
     .card {
         padding: 20px;
         font-size: 15px;
     }
     span {
-        font-size: 30px;
+        font-size: 20px;
         color:black;
         font-weight: bold;
     }
-}
-
-i {
-  color: rgb(9, 9, 9);
-  font-size: 35px;
 }
 
 li {
