--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -10,6 +10,8 @@
     display: flex;
     justify-content: space-between;
     font-weight: bold;
+    justify-content: center;
+    align-items: center;
 }
 i:hover {
     transform: scale(2); 
@@ -20,5 +22,5 @@ i:hover {
 }
 
 i {
-    margin: 10px;
+    margin: 5px;
 }
