--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -18,7 +18,7 @@ i:hover {
     color: #fff;
     box-shadow: inset 200px 0 0 0 #26de81;
     border-radius: 50%;
-    cursor:grab;
+    cursor: pointer;
 }
 
 i {
