Add fix, when card is favorite

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -24,3 +24,10 @@ i:hover {
 i {
     margin: 5px;
 }
+
+.isFavorite {
+    color: #fff;
+    box-shadow: inset 200px 0 0 0 #26de81;
+    border-radius: 50%;
+    cursor: pointer;
+}
